[gd_scene load_steps=7 format=3 uid="uid://bpse7iuci88lr"]

[ext_resource type="Script" path="res://ui/menus/saves/saves.gd" id="1_vffea"]
[ext_resource type="Texture2D" uid="uid://3c3cfli0hgal" path="res://assets/ui/icons/cross.tres" id="2_5uuxx"]
[ext_resource type="Texture2D" uid="uid://b24hivrw2fe5n" path="res://assets/ui/icons/delete.tres" id="2_6yr4e"]
[ext_resource type="Texture2D" uid="uid://d4h3l85gk7ahu" path="res://assets/ui/icons/check.tres" id="3_jvr46"]
[ext_resource type="Texture2D" uid="uid://b4c17w2bdwhvg" path="res://assets/ui/icons/rename.tres" id="3_nmohp"]
[ext_resource type="Texture2D" uid="uid://djiadsqq65hkd" path="res://assets/ui/icons/copy.tres" id="6_yac57"]

[node name="Saves" type="Window"]
title = "Saves_Title"
initial_position = 2
size = Vector2i(960, 450)
script = ExtResource("1_vffea")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HSplitContainer" type="HSplitContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
split_offset = -240

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HSplitContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Search" type="LineEdit" parent="VBoxContainer/HSplitContainer/VBoxContainer"]
layout_mode = 2
placeholder_text = "Saves_Search"

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer/HSplitContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/HSplitContainer/VBoxContainer/PanelContainer"]
layout_mode = 2

[node name="SavesList" type="VBoxContainer" parent="VBoxContainer/HSplitContainer/VBoxContainer/PanelContainer/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="PanelContainer2" type="PanelContainer" parent="VBoxContainer/HSplitContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/HSplitContainer/PanelContainer2"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HSplitContainer/PanelContainer2/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer/HSplitContainer/PanelContainer2/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/HSplitContainer/PanelContainer2/ScrollContainer/VBoxContainer/PanelContainer"]
layout_mode = 2

[node name="SaveName" type="LineEdit" parent="VBoxContainer/HSplitContainer/PanelContainer2/ScrollContainer/VBoxContainer/PanelContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = " "
placeholder_text = "Saves_SaveName"
editable = false

[node name="ConfirmButtons" type="HBoxContainer" parent="VBoxContainer/HSplitContainer/PanelContainer2/ScrollContainer/VBoxContainer/PanelContainer/HBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="Cancel" type="Button" parent="VBoxContainer/HSplitContainer/PanelContainer2/ScrollContainer/VBoxContainer/PanelContainer/HBoxContainer/ConfirmButtons"]
layout_mode = 2
icon = ExtResource("2_5uuxx")

[node name="Confirm" type="Button" parent="VBoxContainer/HSplitContainer/PanelContainer2/ScrollContainer/VBoxContainer/PanelContainer/HBoxContainer/ConfirmButtons"]
layout_mode = 2
icon = ExtResource("3_jvr46")

[node name="OptionButtons" type="HBoxContainer" parent="VBoxContainer/HSplitContainer/PanelContainer2/ScrollContainer/VBoxContainer/PanelContainer/HBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="Delete" type="Button" parent="VBoxContainer/HSplitContainer/PanelContainer2/ScrollContainer/VBoxContainer/PanelContainer/HBoxContainer/OptionButtons"]
layout_mode = 2
icon = ExtResource("2_6yr4e")

[node name="Rename" type="Button" parent="VBoxContainer/HSplitContainer/PanelContainer2/ScrollContainer/VBoxContainer/PanelContainer/HBoxContainer/OptionButtons"]
layout_mode = 2
icon = ExtResource("3_nmohp")

[node name="Copy" type="Button" parent="VBoxContainer/HSplitContainer/PanelContainer2/ScrollContainer/VBoxContainer/PanelContainer/HBoxContainer/OptionButtons"]
layout_mode = 2
icon = ExtResource("6_yac57")

[node name="Mods" type="VBoxContainer" parent="VBoxContainer/HSplitContainer/PanelContainer2/ScrollContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="TargetName" type="LineEdit" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Saves_SaveName"

[node name="Button" type="Button" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Saves_Save"

[node name="ForceLoad" type="Button" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Saves_ForceLoad"

[node name="AcceptDialog" type="AcceptDialog" parent="."]
unique_name_in_owner = true
title = ""
initial_position = 2

[node name="ConfirmationDialog" type="ConfirmationDialog" parent="."]
unique_name_in_owner = true
title = ""
initial_position = 2

[connection signal="close_requested" from="." to="." method="hide"]
[connection signal="text_changed" from="VBoxContainer/HSplitContainer/VBoxContainer/Search" to="." method="_on_search_text_changed"]
[connection signal="pressed" from="VBoxContainer/HSplitContainer/PanelContainer2/ScrollContainer/VBoxContainer/PanelContainer/HBoxContainer/ConfirmButtons/Cancel" to="." method="_on_cancel_pressed"]
[connection signal="pressed" from="VBoxContainer/HSplitContainer/PanelContainer2/ScrollContainer/VBoxContainer/PanelContainer/HBoxContainer/ConfirmButtons/Confirm" to="." method="_on_confirm_pressed"]
[connection signal="pressed" from="VBoxContainer/HSplitContainer/PanelContainer2/ScrollContainer/VBoxContainer/PanelContainer/HBoxContainer/OptionButtons/Delete" to="." method="_on_delete_pressed"]
[connection signal="pressed" from="VBoxContainer/HSplitContainer/PanelContainer2/ScrollContainer/VBoxContainer/PanelContainer/HBoxContainer/OptionButtons/Rename" to="." method="_on_rename_pressed"]
[connection signal="pressed" from="VBoxContainer/HSplitContainer/PanelContainer2/ScrollContainer/VBoxContainer/PanelContainer/HBoxContainer/OptionButtons/Copy" to="." method="_on_copy_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/ForceLoad" to="." method="_on_force_load_pressed"]
[connection signal="confirmed" from="ConfirmationDialog" to="." method="_on_confirmation_dialog_confirmed"]
